add a time count.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(spdlog CONFIG REQUIRED)
 target_link_libraries(ccp  PRIVATE spdlog::spdlog)
 find_package(unofficial-concurrentqueue CONFIG REQUIRED)
 target_link_libraries(ccp PRIVATE unofficial::concurrentqueue::concurrentqueue)
+find_package(cy CONFIG REQUIRED)
+target_link_libraries(ccp PRIVATE cy::cy)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
